css/init/layout.css
:root {
  --half-gap: 10px;
  --gap: calc(2 * var(--half-gap));
  --col1: calc(100% / 12 - var(--gap));
  --cg: calc(var(--gap) + var(--col1));
  --col2: calc(var(--col1) + var(--cg));
  --col3: calc(var(--col2) + var(--cg));
  --col4: calc(var(--col3) + var(--cg));
  --col5: calc(var(--col4) + var(--cg));
  --col6: calc(var(--col5) + var(--cg));
  --col7: calc(var(--col6) + var(--cg));
  --col8: calc(var(--col7) + var(--cg));
  --col9: calc(var(--col8) + var(--cg));
  --col10: calc(var(--col9) + var(--cg));
  --col11: calc(var(--col10) + var(--cg));
  --col12: calc(var(--col11) + var(--cg));

  --ml1: calc(var(--col1) + 3 * var(--half-gap));
  --ml2: calc(var(--ml1) + var(--cg));
  --ml3: calc(var(--ml2) + var(--cg));
  --ml4: calc(var(--ml3) + var(--cg));
  --ml5: calc(var(--ml4) + var(--cg));
  --ml6: calc(var(--ml5) + var(--cg));
  --ml7: calc(var(--ml6) + var(--cg));
  --ml8: calc(var(--ml7) + var(--cg));
  --ml9: calc(var(--ml8) + var(--cg));
  --ml10: calc(var(--ml9) + var(--cg));
  --ml11: calc(var(--ml10) + var(--cg));
}

.container {
  display: inline-block;
  width: 100%;
  padding: 20px;
}
.container > .row {
  display: inline-block;
  width: 100%;
  background-color: lightcyan;
  margin: 10px 0;
}
.container > .row > [class*='col-'] {
  float: left;
  margin-left: var(--half-gap);
  margin-right: var(--half-gap);
  background-color: yellow;
}
.container > .row > .col-1 {
  width: var(--col1);
}
.container > .row > .col-2 {
  width: var(--col2);
}
.container > .row > .col-3 {
  width: var(--col3);
}
.container > .row > .col-4 {
  width: var(--col4);
}
.container > .row > .col-5 {
  width: var(--col5);
}
.container > .row > .col-6 {
  width: var(--col6);
}
.container > .row > .col-7 {
  width: var(--col7);
}
.container > .row > .col-8 {
  width: var(--col8);
}
.container > .row > .col-9 {
  width: var(--col9);
}
.container > .row > .col-10 {
  width: var(--col10);
}
.container > .row > .col-11 {
  width: var(--col11);
}
.container > .row > .col-12 {
  width: var(--col12);
}

.container > .row > .ml-1 {
  margin-left: var(--ml1);
}
.container > .row > .ml-2 {
  margin-left: var(--ml2);
}
.container > .row > .ml-3 {
  margin-left: var(--ml3);
}
.container > .row > .ml-4 {
  margin-left: var(--ml4);
}
.container > .row > .ml-5 {
  margin-left: var(--ml5);
}
.container > .row > .ml-6 {
  margin-left: var(--ml6);
}
.container > .row > .ml-7 {
  margin-left: var(--ml7);
}
.container > .row > .ml-8 {
  margin-left: var(--ml8);
}
.container > .row > .ml-9 {
  margin-left: var(--ml9);
}
.container > .row > .ml-10 {
  margin-left: var(--ml10);
}
.container > .row > .ml-11 {
  margin-left: var(--ml11);
}

@media (min-width: 575px) {
  .container > .row > .col-sm-1 {
    width: var(--col1);
  }
  .container > .row > .col-sm-2 {
    width: var(--col2);
  }
  .container > .row > .col-sm-3 {
    width: var(--col3);
  }
  .container > .row > .col-sm-4 {
    width: var(--col4);
  }
  .container > .row > .col-sm-5 {
    width: var(--col5);
  }
  .container > .row > .col-sm-6 {
    width: var(--col6);
  }
  .container > .row > .col-sm-7 {
    width: var(--col7);
  }
  .container > .row > .col-sm-8 {
    width: var(--col8);
  }
  .container > .row > .col-sm-9 {
    width: var(--col9);
  }
  .container > .row > .col-sm-10 {
    width: var(--col10);
  }
  .container > .row > .col-sm-11 {
    width: var(--col11);
  }
  .container > .row > .col-sm-12 {
    width: var(--col12);
  }

  .container > .row > .ml-sm-1 {
    margin-left: var(--ml1);
  }
  .container > .row > .ml-sm-2 {
    margin-left: var(--ml2);
  }
  .container > .row > .ml-sm-3 {
    margin-left: var(--ml3);
  }
  .container > .row > .ml-sm-4 {
    margin-left: var(--ml4);
  }
  .container > .row > .ml-sm-5 {
    margin-left: var(--ml5);
  }
  .container > .row > .ml-sm-6 {
    margin-left: var(--ml6);
  }
  .container > .row > .ml-sm-7 {
    margin-left: var(--ml7);
  }
  .container > .row > .ml-sm-8 {
    margin-left: var(--ml8);
  }
  .container > .row > .ml-sm-9 {
    margin-left: var(--ml9);
  }
  .container > .row > .ml-sm-10 {
    margin-left: var(--ml10);
  }
  .container > .row > .ml-sm-11 {
    margin-left: var(--ml11);
  }
}

@media (min-width: 767px) {
  .container > .row > .col-md-1 {
    width: var(--col1);
  }
  .container > .row > .col-md-2 {
    width: var(--col2);
  }
  .container > .row > .col-md-3 {
    width: var(--col3);
  }
  .container > .row > .col-md-4 {
    width: var(--col4);
  }
  .container > .row > .col-md-5 {
    width: var(--col5);
  }
  .container > .row > .col-md-6 {
    width: var(--col6);
  }
  .container > .row > .col-md-7 {
    width: var(--col7);
  }
  .container > .row > .col-md-8 {
    width: var(--col8);
  }
  .container > .row > .col-md-9 {
    width: var(--col9);
  }
  .container > .row > .col-md-10 {
    width: var(--col10);
  }
  .container > .row > .col-md-11 {
    width: var(--col11);
  }
  .container > .row > .col-md-12 {
    width: var(--col12);
  }

  .container > .row > .ml-md-1 {
    margin-left: var(--ml1);
  }
  .container > .row > .ml-md-2 {
    margin-left: var(--ml2);
  }
  .container > .row > .ml-md-3 {
    margin-left: var(--ml3);
  }
  .container > .row > .ml-md-4 {
    margin-left: var(--ml4);
  }
  .container > .row > .ml-md-5 {
    margin-left: var(--ml5);
  }
  .container > .row > .ml-md-6 {
    margin-left: var(--ml6);
  }
  .container > .row > .ml-md-7 {
    margin-left: var(--ml7);
  }
  .container > .row > .ml-md-8 {
    margin-left: var(--ml8);
  }
  .container > .row > .ml-md-9 {
    margin-left: var(--ml9);
  }
  .container > .row > .ml-md-10 {
    margin-left: var(--ml10);
  }
  .container > .row > .ml-md-11 {
    margin-left: var(--ml11);
  }
}

@media (min-width: 991px) {
  .container > .row > .col-lg-1 {
    width: var(--col1);
  }
  .container > .row > .col-lg-2 {
    width: var(--col2);
  }
  .container > .row > .col-lg-3 {
    width: var(--col3);
  }
  .container > .row > .col-lg-4 {
    width: var(--col4);
  }
  .container > .row > .col-lg-5 {
    width: var(--col5);
  }
  .container > .row > .col-lg-6 {
    width: var(--col6);
  }
  .container > .row > .col-lg-7 {
    width: var(--col7);
  }
  .container > .row > .col-lg-8 {
    width: var(--col8);
  }
  .container > .row > .col-lg-9 {
    width: var(--col9);
  }
  .container > .row > .col-lg-10 {
    width: var(--col10);
  }
  .container > .row > .col-lg-11 {
    width: var(--col11);
  }
  .container > .row > .col-lg-12 {
    width: var(--col12);
  }

  .container > .row > .ml-lg-1 {
    margin-left: var(--ml1);
  }
  .container > .row > .ml-lg-2 {
    margin-left: var(--ml2);
  }
  .container > .row > .ml-lg-3 {
    margin-left: var(--ml3);
  }
  .container > .row > .ml-lg-4 {
    margin-left: var(--ml4);
  }
  .container > .row > .ml-lg-5 {
    margin-left: var(--ml5);
  }
  .container > .row > .ml-lg-6 {
    margin-left: var(--ml6);
  }
  .container > .row > .ml-lg-7 {
    margin-left: var(--ml7);
  }
  .container > .row > .ml-lg-8 {
    margin-left: var(--ml8);
  }
  .container > .row > .ml-lg-9 {
    margin-left: var(--ml9);
  }
  .container > .row > .ml-lg-10 {
    margin-left: var(--ml10);
  }
  .container > .row > .ml-lg-11 {
    margin-left: var(--ml11);
  }
}

@media (min-width: 1199px) {
  .container > .row > .col-xl-1 {
    width: var(--col1);
  }
  .container > .row > .col-xl-2 {
    width: var(--col2);
  }
  .container > .row > .col-xl-3 {
    width: var(--col3);
  }
  .container > .row > .col-xl-4 {
    width: var(--col4);
  }
  .container > .row > .col-xl-5 {
    width: var(--col5);
  }
  .container > .row > .col-xl-6 {
    width: var(--col6);
  }
  .container > .row > .col-xl-7 {
    width: var(--col7);
  }
  .container > .row > .col-xl-8 {
    width: var(--col8);
  }
  .container > .row > .col-xl-9 {
    width: var(--col9);
  }
  .container > .row > .col-xl-10 {
    width: var(--col10);
  }
  .container > .row > .col-xl-11 {
    width: var(--col11);
  }
  .container > .row > .col-xl-12 {
    width: var(--col12);
  }

  .container > .row > .ml-xl-1 {
    margin-left: var(--ml1);
  }
  .container > .row > .ml-xl-2 {
    margin-left: var(--ml2);
  }
  .container > .row > .ml-xl-3 {
    margin-left: var(--ml3);
  }
  .container > .row > .ml-xl-4 {
    margin-left: var(--ml4);
  }
  .container > .row > .ml-xl-5 {
    margin-left: var(--ml5);
  }
  .container > .row > .ml-xl-6 {
    margin-left: var(--ml6);
  }
  .container > .row > .ml-xl-7 {
    margin-left: var(--ml7);
  }
  .container > .row > .ml-xl-8 {
    margin-left: var(--ml8);
  }
  .container > .row > .ml-xl-9 {
    margin-left: var(--ml9);
  }
  .container > .row > .ml-xl-10 {
    margin-left: var(--ml10);
  }
  .container > .row > .ml-xl-11 {
    margin-left: var(--ml11);
  }
}

@media (min-width: 1399px) {
  .container > .row > .col-xxl-1 {
    width: var(--col1);
  }
  .container > .row > .col-xxl-2 {
    width: var(--col2);
  }
  .container > .row > .col-xxl-3 {
    width: var(--col3);
  }
  .container > .row > .col-xxl-4 {
    width: var(--col4);
  }
  .container > .row > .col-xxl-5 {
    width: var(--col5);
  }
  .container > .row > .col-xxl-6 {
    width: var(--col6);
  }
  .container > .row > .col-xxl-7 {
    width: var(--col7);
  }
  .container > .row > .col-xxl-8 {
    width: var(--col8);
  }
  .container > .row > .col-xxl-9 {
    width: var(--col9);
  }
  .container > .row > .col-xxl-10 {
    width: var(--col10);
  }
  .container > .row > .col-xxl-11 {
    width: var(--col11);
  }
  .container > .row > .col-xxl-12 {
    width: var(--col12);
  }

  .container > .row > .ml-xxl-1 {
    margin-left: var(--ml1);
  }
  .container > .row > .ml-xxl-2 {
    margin-left: var(--ml2);
  }
  .container > .row > .ml-xxl-3 {
    margin-left: var(--ml3);
  }
  .container > .row > .ml-xxl-4 {
    margin-left: var(--ml4);
  }
  .container > .row > .ml-xxl-5 {
    margin-left: var(--ml5);
  }
  .container > .row > .ml-xxl-6 {
    margin-left: var(--ml6);
  }
  .container > .row > .ml-xxl-7 {
    margin-left: var(--ml7);
  }
  .container > .row > .ml-xxl-8 {
    margin-left: var(--ml8);
  }
  .container > .row > .ml-xxl-9 {
    margin-left: var(--ml9);
  }
  .container > .row > .ml-xxl-10 {
    margin-left: var(--ml10);
  }
  .container > .row > .ml-xxl-11 {
    margin-left: var(--ml11);
  }
}

